# neural-network-sms-text-classifier

./: .gitignore  Makefile  README.md  fcc_sms_text_classification.ipynb  flake.nix  pyproject.toml
