[project]
name = "neural-network-sms-text-classifier"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "nooneknows", email = "157999171+nooneknowspeter@users.noreply.github.com" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
