[project]
name = "neural-network-sms-text-classifier"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "nooneknows", email = "157999171+nooneknowspeter@users.noreply.github.com" },
]
dependencies = ["jupyter (>=1.1.1,<2.0.0)", "jupyterlab (>=4.4.5,<5.0.0)", "jupyterlab-lsp (>=5.2.0,<6.0.0)", "pyright (>=1.1.403,<2.0.0)", "python-lsp-server (>=1.13.0,<2.0.0)", "jupytext (>=1.17.2,<2.0.0)", "pynvim (>=0.5.2,<0.6.0)", "jupyter-client (>=8.6.3,<9.0.0)", "ipykernel (>=6.30.0,<7.0.0)", "pandas (>=2.3.1,<3.0.0)", "matplotlib (>=3.10.3,<4.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
